task-2/np/01-np-pod1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-pod-1
spec:
  podSelector:
    matchLabels:
      role: pod-1
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: pod-2
  egress:
  - {}
