task-2/np/02-np-pod2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-pod-2
spec:
  podSelector:
    matchLabels:
      role: pod-2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: pod-1
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: pod-1
